[package]
name = "alternatetopbar"
version = "0.1.0"
authors = ["Erik Lilja <erikvlilja@gmail.com>"]
edition = "2018"

[dependencies]
zellij-tile = "0.37.2"
colored = "2.0.0"
regex = "1.3.3"
unicode-segmentation = "1.10.0"
alternatetopbar-lib = { path = "../alternatetopbar-lib" }

[build]
target = "wasm32-wasi"
